<resources>
    <string name="app_name" translatable="false">Dicer</string>

    <string name="action_settings">Settings</string>
    <string name="drop_the_dice">Drop the dices</string>
    <string name="dice_1">Dice 1</string>
    <string name="dice_2">Dice 2</string>
    <string name="dice_3">Dice 3</string>
    <string name="dice_4">Dice 4</string>
    <string name="dice_5">Dice 5</string>
    <string name="info">Info:</string>
    <string name="you_have">You have</string>
    <string name="you_have_poker">You have poker</string>
    <string name="of">of</string>
    <string name="you_have_four_of_a_kind">You have four of a kind</string>
    <string name="you_have_three_of_a_kind">You have three of a kind</string>
    <string name="you_have_one_pair">You have one pair</string>
    <string name="you_have_full_house">You have full house</string>
    <string name="you_have_two_pair">You have two pair</string>
    <string name="and">and</string>
    <string name="you_have_little_strait">You have little strait (from 1 to 5)</string>
    <string name="you_have_big_strait">You have big strait (from 2 to 6)</string>
    <string name="you_have_no_combinations">You have no combinations</string>
    <string name="numericalResult">Numerical result: </string>
    <string name="game">Game</string>
    <string name="player_vs_computer">Player vs computer</string>
    <string name="player_vs_player">PLayer vs player</string>
    <string name="exit">Exit</string>
    <string name="exit_q">Exit?</string>
    <string name="sure_exit_q">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="double_press_ask">Press again to exit</string>
    <string name="first_player_win">First player has win</string>
    <string name="second_player_win">Second player has win</string>
    <string name="dead_heat">Dead heat</string>
    <string name="drop_dice_first_player">Drop dices of the first player</string>
    <string name="drop_dice_second_player">Drop dices of the second player</string>
    <string name="new_game">New Game</string>
    <string name="new_game_q">Start new game?</string>
    <string name="ok">OK</string>
    <string name="bank">Bank:</string>
    <string name="money_count">Count of money:</string>
    <string name="blind">Blind</string>
    <string name="set_blind">Set blind</string>
    <string name="blind_5" translatable="false">5</string>
    <string name="blind_10" translatable="false">10</string>
    <string name="please_enter_blind">Please enter the blind (Blind must be grater than 0)</string>
    <string name="raise">Raise</string>
    <string name="call">Call</string>
    <string name="fold">Fold</string>
    <string name="raise_the_bet">Raise the bet</string>
    <string name="all_in">All in</string>
    <string name="cancel">Cancel</string>
    <string name="please_enter_bet">Please enter the bet (Bet must be greater than 0)</string>
    <string name="check">Check</string>
    <string name="first_player_comb">First player:</string>
    <string name="second_player_comb">Second player:</string>
    <string name="prize">Prize:</string>
    <string name="bet">Bet:</string>
</resources>
