<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/buttonTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/blindPreviousBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:text="" />

        <Button
            android:id="@+id/blind5Btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:text="@string/blind_5" />

        <Button
            android:id="@+id/blind10Btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:text="@string/blind_10" />

    </LinearLayout>

    <EditText
        android:id="@+id/setBlindEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonTable"
        android:inputType="number" />

    <Button
        android:id="@+id/blindOkBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setBlindEdit"
        android:text="@string/ok" />

</RelativeLayout>
